@@ -460,6 +460,9 @@ Release 2.6.0 - UNRELEASED
     HADOOP-11161. Expose close method in KeyProvider to give clients of
     Provider implementations a hook to release resources. (Arun Suresh via atm)
 
+    HADOOP-11133. Should trim the content of keystore password file for JavaKeyStoreProvider
+    (Yi Liu via umamahesh)
+
     BREAKDOWN OF HDFS-6134 AND HADOOP-10150 SUBTASKS AND RELATED JIRAS
   
       HADOOP-10734. Implement high-performance secure random number sources.
